# Endophytic-Bacteria-Identification

./: CONTRIBUTING.md  Professional Project Structure  README.md  pyproject.toml  requirements.txt
data/: sample_sequences.fasta
scripts/: endophyte_analysis.py  identify_bacteria.py
